fix: fix mobile issue with overlapping elements

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     position: fixed;
     top: 20%;
     right: 10%;
-    z-index: 1;
+    z-index: 2;
     font-size: 28px;
   }
 
@@ -27,4 +27,5 @@ main {
   background-color: var(--background);
   margin: 2em auto;
   border-radius: 0px;
+  z-index: 3;
 }
